c4prj2_input/grade.txt
Grading at Sat May 16 18:56:11 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:41:14: error: unused variable ‘temp’ [-Werror=unused-variable]
       card_t temp = *(deck->cards[i]);
              ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
